<resources>
    <string name="app_name">Route-E-Commerce</string>
    <string name="welcome_back_to_route">Welcome Back To Route</string>
    <string name="please_sign_in_with_your_mail">Please sign in with your mail</string>
    <string name="user_name">User Name</string>
    <string name="enter_your_name">enter your name</string>
    <string name="password">Password</string>
    <string name="enter_your_password">enter your password</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_create_account">Don\'t have an account? Create Account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>