<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dark_blue">

        <ImageView
            android:id="@+id/logo_route"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/route_logo"
            android:layout_marginTop="50dp" />

        <TextView
            android:id="@+id/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logo_route"
            android:text="@string/welcome_back_to_route"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_semibold"
            android:layout_marginStart="16dp"
            android:layout_marginTop="50dp"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/please"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/welcome"
            app:layout_constraintStart_toStartOf="@id/welcome"
            android:text="@string/please_sign_in_with_your_mail"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_light"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            app:layout_constraintTop_toBottomOf="@id/please"
            app:layout_constraintStart_toStartOf="@id/please"
            android:layout_marginTop="25dp"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:fontFamily="@font/poppins_medium" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/user_name"
            android:layout_margin="16sp"
            android:padding="5dp"
            android:background="@drawable/back_text_nput_layout"
            android:hint="@string/enter_your_name" />

        <TextView
            android:id="@+id/pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            app:layout_constraintStart_toStartOf="@id/user_name"
            app:layout_constraintTop_toBottomOf="@id/email"
            android:layout_marginTop="15dp"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:fontFamily="@font/poppins_medium" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            app:layout_constraintStart_toStartOf="@id/email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pass"
            android:layout_margin="16sp"
            android:padding="5dp"
            android:background="@drawable/back_text_nput_layout"
            android:hint="@string/enter_your_password" />

        <TextView
            android:id="@+id/forget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_password"
            app:layout_constraintTop_toBottomOf="@id/password"
            app:layout_constraintEnd_toEndOf="@id/password"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_regular"
            android:layout_marginTop="10dp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintStart_toStartOf="@id/password"
            app:layout_constraintEnd_toEndOf="@id/password"
            app:layout_constraintTop_toBottomOf="@id/forget"
            android:layout_margin="15dp"
            android:background="@drawable/back_text_nput_layout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:textColor="@color/light_blue"
                android:textSize="20sp"
                android:fontFamily="@font/poppins_semibold" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/login_btn"
            app:layout_constraintEnd_toEndOf="@id/login_btn"
            app:layout_constraintTop_toBottomOf="@id/login_btn"
            android:layout_marginTop="25dp"
            android:text="@string/don_t_have_an_account_create_account"
            android:textSize="18sp"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/white" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>